--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,7 +28,8 @@ body {
 main {
   background-color: #f4f1ec;
   display: flex;
-  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
   flex-direction: column;
   align-items: center;
 }
